# MLHeatmap

./: .dockerignore  .gitignore  Dockerfile  README.md  install-macos.sh  install-ubuntu.sh  install-windows.cmd  install-windows.ps1  pyproject.toml  requirements-lock.txt  run-macos.sh  run-ubuntu.sh  run-windows.cmd  test_counts.csv
.github/workflows/: ci.yml
scripts/: build_gene_tables.py  compare_cmscaller_vs_mlheatmap.py  label_gse39582_cmscaller.R  make_fold_overlap_figure.py  paper_reproduce.py  prepare_gse39582.py  prepare_public_crc_cms_gold.py  regenerate_figs3_comparison.py  regenerate_figure1_bc.py  rerun_main_only.py  run_batch_effect_analysis.py  run_cmcbsn_validation.py  run_cmscaller_benchmark.R  run_gse39582_validation.py  run_manuscript_analysis.py
src/mlheatmap/: __init__.py  __main__.py  cli.py  public_crc_cms.py  server.py
src/mlheatmap/api/: biomarker.py  capabilities.py  export.py  gene_mapping.py  groups.py  heatmap.py  normalize.py  session.py  session_routes.py  upload.py  validation.py
src/mlheatmap/core/: biomarker.py  cancellation.py  capabilities.py  clustering.py  deg.py  export.py  gene_mapping.py  input_io.py  install_check.py  normalization.py  server_render.py
src/mlheatmap/data/: crcsc_tcga_cms_labels_vendored.tsv  human_genes.tsv  mouse_genes.tsv
src/mlheatmap/static/: index.html
src/mlheatmap/static/css/: main.css
src/mlheatmap/static/js/: api.js  app.js  biomarker.js  export.js  groups.js  heatmap.js  upload.js
test_data/: generate_rnaseq.py  human_60k_8samples.csv  human_ensembl_12samples.csv
tests/: generate_test_data.py  test_api.py  test_core.py  test_installation.py  test_platform_support.py  test_public_crc_cms.py  test_revision_features.py
tests/data/: human_ensembl_12samples.csv  mouse_ensembl_8samples.csv  small_quick_test.csv  sparse_edge_case.csv  symbol_3groups.tsv
