[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlheatmap"
version = "0.1.0"
description = "Interactive RNA-seq heatmap and biomarker discovery tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Keunsoo Kang" }
]
keywords = ["rnaseq", "heatmap", "biomarker", "shap", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "plotly>=5.15.0",
    "kaleido>=0.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
]

[project.scripts]
mlheatmap = "mlheatmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlheatmap"]
