[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlheatmap"
version = "0.1.0"
description = "Interactive RNA-seq heatmap and biomarker discovery tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Keunsoo Kang" }
]
keywords = ["rnaseq", "heatmap", "biomarker", "shap", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.51.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
full = [
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
]

[project.scripts]
mlheatmap = "mlheatmap.cli:main"

[tool.hatch.build]
include = [
    "/src/mlheatmap/data/*.tsv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlheatmap"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/mlheatmap/data/*.tsv",
    "/README.md",
    "/LICENSE",
]
